<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Other"
    android:background="@color/bottle_green">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="@drawable/details_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/background_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/details_background"
            android:contentDescription="@string/background_facts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/other_Category"
            android:text="@string/other"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/americantypewriter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="2.5sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="-2sp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/back"
        android:textStyle="bold"
        android:textColor="@color/myrtle_green"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/category_header"
        android:text="@string/select_an_item"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="@font/americantypewriter"
        android:layout_marginTop="45sp"
        android:layout_marginStart="110sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/flavour"
        android:text="@string/flavour_shots"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/lavender_blue"
        android:fontFamily="@font/americantypewriter"
        android:backgroundTint="@color/rhythm"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="100sp"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/espr"
        android:text="@string/espresso"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/lavender_blue"
        android:fontFamily="@font/americantypewriter"
        android:backgroundTint="@color/rhythm"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="225sp"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/milk"
        android:text="@string/milk"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/lavender_blue"
        android:fontFamily="@font/americantypewriter"
        android:backgroundTint="@color/rhythm"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="350sp"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/cream"
        android:text="@string/cream"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/lavender_blue"
        android:fontFamily="@font/americantypewriter"
        android:backgroundTint="@color/rhythm"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="475sp"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/sugar_1"
        android:text="@string/sugar1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/lavender_blue"
        android:fontFamily="@font/americantypewriter"
        android:backgroundTint="@color/rhythm"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="600sp"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>