<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottle_green"
    tools:context=".listItems.Categories">

    <Button
        android:id="@+id/backButton"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="-2sp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/back"
        android:textColor="@color/myrtle_green"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/check"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginTop="-2sp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/americantypewriter"
        android:text="check"
        android:textColor="@color/myrtle_green"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/select_a_category"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hotCof"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="100sp"
        android:backgroundTint="@color/rhythm"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/hot_coffees"
        android:textColor="@color/lavender_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/coldCof"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="225sp"
        android:backgroundTint="@color/rhythm"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/cold_coffees"
        android:textColor="@color/lavender_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hotD"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="350sp"
        android:backgroundTint="@color/rhythm"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/hot_drinks"
        android:textColor="@color/lavender_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/coldD"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="475sp"
        android:backgroundTint="@color/rhythm"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/cold_drinks"
        android:textColor="@color/lavender_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/other"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="600sp"
        android:backgroundTint="@color/rhythm"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/other"
        android:textColor="@color/lavender_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>